removes card transparency and fix header z-index

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ main {
 }
 
 header {
+  z-index: 999;
   background-color: rgba(15, 15, 15, .5);
   display: flex;
   transition: all 250ms ease-in-out;
@@ -54,7 +55,7 @@ header {
 }
 
 .card {
-  background-color: rgba(15, 15, 15, .5);
+  background-color: rgba(15, 15, 15, 1);
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
